apps/monitoring/base/uptime-kuma/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
spec:
  selector:
    app: uptime-kuma
  ports:
    - name: http
      port: 3001
      targetPort: http
      protocol: TCP
