apps/monitoring/base/uptime-kuma/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: uptime-kuma
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: default
  hostnames:
    - status.good-robert.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: uptime-kuma
          port: 3001
